bluejay-typegen/tests/validation_cases/error/missing_custom_scalar_alias.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: Foo
    }

    scalar Foo
])]
mod schema {}

fn main() {}
